--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap');
-:root{
+
+:root {
     --font: 'Source Sans Pro', sans-serif;
-    --text-primary : #fff;
+    --text-primary: #fff;
     --text-dark: #000;
     --text-orange: #F15A46;
     --bg-color: #fff;
@@ -15,106 +16,161 @@
     --bg-star: #FFA800;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     outline: 0;
 }
 
-body{
+body {
     font-family: var(--font);
     font-size: 16px;
 }
-p{
+
+p {
     margin-bottom: 0;
 }
-.text-orange{
+
+.text-orange {
     color: var(--text-orange);
 }
-.btn-custom, .btn-custom:hover, .btn-custom:active, .btn-custom:focus{
+
+.btn-custom,
+.btn-custom:hover,
+.btn-custom:active,
+.btn-custom:focus {
     background: var(--bg-btn);
     color: var(--text-primary);
 }
-.font-18{
+
+.font-12 {
+    font-size: 12px;
+}
+
+.font-18 {
     font-size: 18px;
 }
-.font-20{
+
+.font-20 {
     font-size: 20px;
 }
-.font-24{
+
+.font-24 {
     font-size: 24px;
 }
-.font-28{
+
+.font-28 {
     font-size: 28px;
 }
-.font-40{
+
+.font-40 {
     font-size: 40px;
 }
+
 /* top nav */
-.top-nav{
+.top-nav {
     background-color: var(--bg-dark);
     color: #fff;
     padding: 0;
     margin: 0;
 }
-.top-right li a i{
+
+.top-right li a i {
     color: #fff;
 }
+
 /* Main nav */
-.main-nav{
+.main-nav {
     background: var(--bg-nav);
 }
+
 .navbar-expand-lg .navbar-nav .nav-link {
     color: var(--text-primary);
     font-size: 20px;
 }
+
 /* Banner */
-.banner{
+.banner {
     background-image: url(../img/banner.png);
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
     height: 80vh;
 }
-.services{
+
+.services {
     background: var(--bg-banner);
 }
-.service-item{
+
+.service-item {
     font-size: 25px;
 }
-.project-done{
+
+.project-done {
     background-color: #FEF7F6;
 }
-.card{
+
+.card {
     border: 0;
     box-shadow: 2px 3px 0px 3px #f0f0f0a1;
 }
+
 .project-done .card img {
     height: 80px;
 }
+
 /* Review */
 .text-w {
     width: 216px;
 }
-.star{
+
+.star {
     color: #FFA800;
 }
 
 /* Brand */
-.brand{
+.brand {
     background: var(--bg-brand);
 }
 
 /* footer */
-.top-footer{
+.top-footer {
     background: var(--bg-top-footer);
 }
-.main-footer{
+
+.btn-white,
+.btn-white:hover,
+.btn-white:active {
+    background: var(--bg-color);
+    color: var(--bg-btn);
+}
+
+.main-footer {
     background: var(--bg-footer);
 }
-@media(min-width:767px){
+
+@media(min-width:767px) {
+
     /* service img */
-    .service-img{
+    .service-img {
         width: 562px;
         height: 560px;
+    }
+    .service-card{
+        position: relative;
+    }
+    li .service-card::after {
+        position: absolute;
+        content: "";
+        height: 100%;
+        width: 1px;
+        background: #414141;
+        top: 0;
+        right: 0;
+    }
+
+    li:last-child .service-card::after, li:nth-child(3) .service-card::after {
+        position: absolute;
+        content: "";
+        width: 0;
     }
 }
